<resources>
    <string name="app_name">斯内克</string>
    <string name="discover">发现</string>
    <string name="follow">关注</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="pen_name">笔名</string>
    <string name="interest">爱好</string>
    <string name="life_motto">人生格言</string>
    <string name="url_jianshu">http://www.jianshu.com/users/db019edd34b4/latest_articles</string>
    <string name="be_good_at">擅长</string>
    <string name="lanuage">Android/iOS/Java Web/C++/Kotlin</string>
    <string name="be_urself">活出自己的精彩！</string>
    <string name="interest_content">编程，旅游，运动，综艺</string>
    <string name="ouyangfeng">欧阳锋</string>
    <string name="jianshu">简书</string>
    <string name="go_to_author_jianshu">关注作者简书</string>
    <string name="go_to_autor_jianshu">关注作者简书</string>

    <string name="use_in_activity">在Activity中使用</string>
    <string name="use_in_fragment">在android.app.Fragment中使用</string>
    <string name="use_in_support_fragment">在androidx.fragment.app.Fragment中使用</string>
    <string name="use_in_webview">在WebView中使用</string>
    <string name="dynamic_off_on">随时开启/关闭</string>
    <string name="nest_scroll_widget">嵌套滑动控件</string>

    <string name="the_first_activity">The first activity</string>
    <string name="the_second_activity">The second activity</string>
    <string name="next">Next</string>
    <string name="the_second_fragment">The second fragment</string>
    <string name="the_third_fragment">The third fragment</string>
    <string name="disable_drag_to_close">禁用滑动关闭</string>
    <string name="enable_drag_to_close">开启滑动关闭</string>
    <string name="star_this_repo">给这个开源库star</string>
    <string name="follow_the_authors_article">关注作者简书</string>
    <string name="mix_use">混合使用</string>
    <string name="entry_fragment">进入Fragment</string>
    <string name="ph_status_of_enable_drag_to_close">
        <![CDATA[
            <font color="#333333">当前滑动关闭功能开启状态：</font>
            <font color="#ff0000">#status</font>
        ]]>
    </string>
    <string name="check_update">检查更新</string>
    <string name="share_to_wechat">分享到微信</string>
    <string name="thanks_to">鸣谢</string>
    <string name="test_softkeyboard">软键盘测试</string>
    <string name="demo_drag_to_close">滑动关闭Demo</string>
    <string name="ph_version">
        <![CDATA[
            <font color="#333333">当前版本：</font>
            <font color="#ff0000">#version</font>
        ]]>
    </string>
    <string name="cheer_for_the_author">为作者打Call</string>
    <string name="snake_tips">如果你喜欢这个开源库，别忘了按照下图步骤给作者star哦，您的鼓励永远是我最大的动力！</string>
    <string name="copy_repo_url">1) Copy版本库地址</string>
    <string name="open_in_pc">2）使用电脑浏览器打开，按照下图操作</string>
    <string name="tip_grant_permissions">为了正常使用该应用，请在设置中开启【存储卡】权限</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="enable_swipe_up_to_home">体验类iPhone X上滑关闭功能</string>
    <string name="use_inherit">使用继承方式集成（推荐）</string>
    <string name="about_author">关注作者微信公众号</string>
    <string name="snake_for_activity_support_status">当前系统是否支持Activity滑动关闭：</string>
    <string name="update_log">更新日志</string>
    <string name="update_log_content">
        1）适配AndroidX \n
        2）新增接口：获取Snake版本信息、获取当前系统Activity滑动关闭支持情况 \n
        3）android.app.Fragment不再支持 \n
        4）在编译阶段自动实现接口SnakeAnimationController，你不再需要自己实现该接口 \n
        5）修复滑动关闭过程中按下返回键页面卡死问题 \n

        \n\n
        ----------------------------- \n
        注意事项 \n
        -----------------------------\n
        1）请使用androidx.fragment.app.Fragment代替android.app.Fragment, android.app.Fragment实现可能存
        在一些未知问题，Snake将不再提供对该类型Fragment支持。\n
        2）Support库版本将不再提供更新支持，请使用androidx版本Fragment库代替 \n
        3）Snake与Navigation不兼容，如需使用Fragment滑动关闭功能，请自己实现Fragment导航，可参考Demo实现。\n
    </string>
    <string name="tips_app_fragment">
        在Android 9.0中，android.app.Fragment已经被舍弃了，推荐使用androidx版本的Fragment。\n
        因此，Snake也将不再提供对该Fragment滑动关闭支持！\n
    </string>
    <string name="prompt_tips">提示</string>
    <string name="qq_group">QQ交流群：288177681</string>
    <string name="slogan_1">一个注解</string>
    <string name="slogan_2">搞定滑动关闭</string>
    <string name="u_need_snake">You need Snake</string>
    <string name="anno_enable_drag_to_close"> <![CDATA[@EnableDragToClose]]></string>
    <string name="opened">已开启</string>
    <string name="closed">已关闭</string>
    <string name="wechat_public_number">公众号：欧阳锋工作室</string>
</resources>
