<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_use_in_activity"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_in_activity"/>

    <Button
        android:id="@+id/btn_use_in_fragment"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_in_fragment"/>

    <Button
        android:id="@+id/btn_use_in_support_fragment"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_in_support_fragment"/>

    <Button
        android:id="@+id/btn_mix_use"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mix_use"/>

    <Button
        android:id="@+id/btn_check_update"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_update"/>

    <Button
        android:id="@+id/btn_share_to_wechat"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_to_wechat"/>

    <Button
        android:id="@+id/btn_gratitude"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks_to"/>
</LinearLayout>
