<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/pen_name"
            android:textSize="14dp"
            android:textColor="#353535" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/ouyangfeng"
            android:textSize="14dp"
            android:textColor="#999999" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:background="#dddddd"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/interest"
            android:textSize="14dp"
            android:textColor="#353535" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/interest_content"
            android:textSize="14dp"
            android:textColor="#999999" />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:background="#dddddd"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/life_motto"
            android:textSize="14dp"
            android:textColor="#353535" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/be_urself"
            android:textSize="14dp"
            android:textColor="#999999" />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:background="#dddddd"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/be_good_at"
            android:textSize="14dp"
            android:textColor="#353535" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/lanuage"
            android:textSize="14dp"
            android:textColor="#999999" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:background="#dddddd"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/jianshu"
            android:textSize="14dp"
            android:textColor="#353535" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/url_jianshu"
            android:textSize="14dp"
            android:textColor="#999999"
            android:maxLength="20"
            android:ellipsize="end"/>
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/go_to_author_jianshu"
        android:textSize="14dp"
        android:textColor="#333333"
        android:id="@+id/button_jianshu"/>

</LinearLayout>