<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anno_enable_drag_to_close"
            android:textColor="#FF3D00"
            android:textSize="25dp"
            android:textStyle="bold">
    </TextView>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="1"
                android:text="@string/slogan_1"
                android:textColor="@color/colorYahei"
                android:textSize="60dp">

        </TextView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:ems="1"
                android:text="@string/slogan_2"
                android:textColor="@color/colorYahei"
                android:textSize="60dp">

        </TextView>

    </LinearLayout>

</LinearLayout>