<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="320dp"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/cat_and_fish" />

        <TextView
            android:id="@+id/text_open_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_disable_drag_to_close"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_drag_to_close" />

        <Button
            android:id="@+id/btn_enable_drag_to_close"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_drag_to_close" />

        <Button
            android:id="@+id/btn_second_activity"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />
    </LinearLayout>
</ScrollView>